--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
         header {
             position: sticky;
             top: 0;
-            background: white;
+            background: yellowgreen;
             z-index: 1000;
         }
+        nav ul li {
+            display: inline;
+            margin-right: 10px;
+            margin-left: 0px;
+            margin-top: -30px;
+            margin-bottom: -30px;
+        }
     </style>
-    <title>Personal Blog</title>
+    <title>Dr. Du Liangfen</title>
 </head>
 <body>
     <header class="container-fluid">
         <nav>
             <ul>
-                <li><strong>My Personal Blog</strong></li>
+                <li><strong>Dr. Du Liangfen (杜良芬)</strong></li>
             </ul>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -36,7 +43,7 @@
                 </hgroup>
                 <p>Welcome to my personal blog where I share my thoughts, stories, and experiences. Here you'll find a variety of topics ranging from daily life to special adventures.</p>
                 <figure>
-                    <img src="https://files.oaiusercontent.com/file-zmsDUky68Rn6ZZWhXvGaSTLs?se=2024-04-07T13%3A53%3A51Z&sp=r&sv=2021-08-06&sr=b&rscc=max-age%3D31536000%2C%20immutable&rscd=attachment%3B%20filename%3Da14bf848-cd01-4df1-9dc1-a5d8f920b719.webp&sig=/uCO4hw%2BSiteEJmXlrx0Nf2%2B0FJEUYjWFm2k6pBn9zQ%3D" alt="Cartoon Dog" />
+                    <img src="https://github.com/liangfen-du/liangfen-du.github.io/assets/166291290/bea99474-afdf-4e5f-8574-f10fcc9c537a" alt="Cartoon Dog" width="256" height="192" />
                     <figcaption>A cheerful cartoon dog to brighten your day!</figcaption>
                 </figure>
                 <h3>About Me</h3>
@@ -46,21 +53,7 @@
             </section>
         </div>
     </main>
-    <section aria-label="Subscribe example">
-        <div class="container">
-            <article>
-                <hgroup>
-                    <h2>Stay Connected</h2>
-                    <h3>Subscribe to My Newsletter</h3>
-                </hgroup>
-                <form class="grid">
-                    <input type="text" id="firstname" name="firstname" placeholder="Your Name" aria-label="Your Name" required />
-                    <input type="email" id="email" name="email" placeholder="Your Email" aria-label="Your Email" required />
-                    <button type="submit" onclick="event.preventDefault()">Subscribe</button>
-                </form>
-            </article>
-        </div>
-    </section>
+    
     <footer class="container">
         <small><a href="#">Privacy Policy</a> • <a href="#">Terms of Use</a></small>
     </footer>
