revise homepage and about

--- a/index.html
+++ b/index.html
@@ -44,15 +44,6 @@
   <meta property="og:site_name" content="Liangfen Du | Assistant Professor | Hong Kong PolyU" />
   <meta property="article:publisher" content="https://liangfen-du.github.io/" />
   <meta property="og:image" content="https://liangfen-du.github.io/examples/preview.JPG" />
-  <!-- Twitter -->
-  <!-- <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
-  <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
-  <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
-  <meta name="author" content="Varad Bhogayata" />
-  <meta name="description"
-    content="Software Developer with a passion for backend development and artificial intelligence." /> -->
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon/apple-icon-72x72.png" />
@@ -93,10 +84,10 @@
         </a>
       </li>
 
-      <li class="bold">
+      <!-- <li class="bold">
         <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
-      </li>
+      </li> -->
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
@@ -168,10 +159,10 @@
   <!-- Nav class 3 -->
   <nav class="hide-on-large only">
     <ul id="slide-out" class="side-nav">
-      <li class="bold">
+      <!-- <li class="bold">
         <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
             class="mdi-social-person small"></i><span>About</span></a>
-      </li>
+      </li> -->
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
@@ -211,11 +202,20 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Liangfen Du, 杜良芬.</span></h2>
-              <h5 style="color:#fff">A/An <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
-              <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate acoustic practitioner who enjoys modelling
-                and solving real-world acoustic problems.</h5>
+              <!-- <h2>Hi, I'm <span class="teal">Liangfen Du, 杜良芬.</span></h2> -->
+              <h5 style="color:#fff">Hi, I am Liangfen Du (Chinese: 杜良芬). I am a <span class="typing"
+                  style="font-weight: 300; color:#004d40"></span></h5>
+              <img src="/assets/img/liangfen-photo.jpg" class="rectangle img" alt="avatar" style="width: 150px;">
+              <p>
+                I joined the Hong Kong Polytechnic University as an Assistant Professor in April 2024. And my
+                research interests include:
+              </p>
+              <ul style="list-style-type: none;">
+                <li>★ Noise reduction technologies enabling natural ventilation</li>
+                <li>★ Acoustic metasurfaces</li>
+                <li>★ Sound prediction</li>
+                <li>★ Environmental noise control</li>
+              </ul>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/liangfen-du-a8770257/" target="_blank">
@@ -223,28 +223,14 @@
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
-              <!-- <a href="https://github.com/varadbhogayata/" target="_blank">
-                <button class="icon-btn github">
-                  <i class="fa fa-github"></i>
+              <a href="https://www.polyu.edu.hk/beee/people/academic-staff/dr-du-liangfen/" target="_blank">
+                <button class="icon-btn hkpu">
+                  <img src="/assets/img/hkpu-logo.png" alt="HKPU Logo" style="width: 30px; height: 30px;">
                 </button>
-              </a> -->
-
-              <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
-                <button class="icon-btn angellist">
-                  <i class="fa fa-angellist"></i>
-                </button>
-              </a> -->
-
-              <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-
-                  </span>
-              </a> -->
+              </a>
             </div>
             <div class='buttons'>
-              <a href="#about" class="readme">Read More</a>
+              <a href="#about" class="readme">More about Me</a>
               <a href="#contact" class="contactme">Contact Me</a>
             </div>
           </div>
@@ -273,7 +259,7 @@
           Singapore from 2021 to 2024, respectively. Dr Du’s research interests encompass noise reduction technologies
           enabling natural ventilation, acoustic metasurfaces, sound prediction, and environmental noise control.
         </p>
-        <p>
+        <!-- <p>
         <ul>
           <li><b>Languages:</b> Python, Java, JavaScript, C, C++, HTML/CSS, Bash</li>
           <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
@@ -281,14 +267,15 @@
           <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>
           <li><b>Tools & Technologies:</b> Git, Docker, AWS, GCP, Heroku, JIRA</li>
         </ul>
-        </p>
+        </p> -->
         <!-- <p>
           Looking for an opportunity to work in a challenging position combining my skills in Software Engineering,
           which provides professional development, interesting experiences and personal growth.
         </p> -->
-        <!-- <p>
-          Another Paragraph
-        </p>  -->
+        <h4 style="color: red;">News</h4>
+        <ul>
+          <li><b>2024/04:</b> I joined BEEE@PolyU as an Assistant Professor</li>
+        </ul>
         <!-- <p>
         <strong>Current Focus</strong>:&nbsp;<a aria-label="Navigate to the Inclusive Design Patterns homepage"
           href="https://www.smashingmagazine.com/inclusive-design-patterns/">Accessibility</a>&nbsp;//&nbsp;<a
@@ -1037,10 +1024,11 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing', {
-      strings: ["Researcher", "Acoustician", "Pythonist"],
+      // strings: ["Researcher", "Acoustician", "Pythonist"],
+      strings: ["passionate practitioner in acoustics."],
       loop: true,
       typeSpeed: 80,
-      backSpeed: 40
+      backSpeed: 2
     });
   </script>
 
