--- a/index.html
+++ b/index.html
@@ -290,12 +290,68 @@
 
     <!-- Third Section: Publications -->
     <section id="publications" class="section scrollspy">
-      <h3 class="page-title white-text teal">Publications</h3>
+      <h3 class="page-title white-text teal">Selected Publications</h3>
       <div class="container">
         <ul>
-          <li>Liangfen Du, Siu-Kit Lau, Siew Eang Lee, and Martin Konrad Danzer. "Experimental study on noise reduction
-            and ventilation performances of sound-proofed ventilation window." Building and Environment 181 (2020):
-            107105.</li>
+          <li>1. Johanna Kay Ann Tan, <b>Liangfen Du</b>, Siu-Kit Lau, Optimization of single-channel active noise
+            control
+            performance in a plenum window using the surface impedance approach. The Journal of the Acoustical Society
+            of America, 2024, 155(2): 1570-1582-4287. </li>
+          <li>2. <b>Liangfen Du</b>, Zheng Fan. Anomalous refraction of acoustic waves using double layered acoustic
+            gratings. The 52th Inter-Noise, Tokyo, Japan, August 20-23, 2023.</li>
+          <li>3. <b>Liangfen Du</b>, Abhishek Saini, Zeqing Sun, Jian Chen, Zheng Fan. Experimental validation of
+            acoustic
+            focusing by a double layered acoustic grating. The 29th International Congress on Sound and Vibration,
+            Prague, the Czech republic, July 09-13, 2023.</li>
+          <li>4. <b>Liangfen Du</b>, Abhishek Saini, Zeqing Sun, Jian Chen, Zheng Fan. Acoustic focusing by a double
+            layered acoustic grating. Journal of Sound and Vibration, 2023, 561, 117830.</li>
+          <li>5. Alexandru Crivoi, <b>Liangfen Du</b>, Zheng Fan. Ventilated acoustic meta-barrier based on layered
+            Helmholtz resonators. Applied Acoustics, 2023, 205: 109263.</li>
+          <li>6. <b>Liangfen Du</b>, Zheng Fan. Acoustic focusing of an acoustic metasurface based on surface coupling
+            approach. The 28th International Congress on Sound and Vibration, Singapore, July 24-28, 2022.</li>
+          <li>7. Jian Chen, Zeqing Sun, <b>Liangfen Du</b>, Zheng Fan. Enhanced acoustic imaging with evanescent
+            amplification. The 28th International Congress on Sound and Vibration, Singapore, July 24-28, 2022.</li>
+          <li>8. <b>Liangfen Du</b>, Siu-Kit Lau, Siew Eang Lee. Prediction of noise reduction of ventilation window by
+            surface impedance approach. Applied Acoustics, 2021, 175: 107851.</li>
+          <li>9. <b>Liangfen Du</b>, Siu-Kit Lau, Siew Eang Lee, Martin Konrad Danzer. Experimental study on noise
+            reduction and ventilation performances of sound-proofed ventilation window. Building and Environment, 2020,
+            181: 107105. </li>
+          <li>10. Goran Pavić, <b>Liangfen Du</b>. Modelling of a closed acoustical space by the boundary reconstruction
+            approach. Forum Acusticum 2020 (FA 2020), December 7-11, 2020.</li>
+          <li>11. Goran Pavić, <b>Liangfen Du</b>. Experimental identification of surface acoustic impedance. Biennial
+            ISMA
+            conference on Noise and Vibration Engineering (ISMA 2020), KU Leuven, Belgium, September 7-9, 2020.</li>
+          <li>12. <b>Liangfen Du</b>, Goran Pavić, Siu-Kit Lau, Siew Eang Lee. Virtual experimental study on sound
+            prediction in multiple connected spaces by surface coupling approach. The 49th Inter-Noise, Soeul, Korea,
+            August 23-26, 2020.</li>
+          <li>13. <b>Liangfen Du</b>, Siu-Kit Lau, Siew Eang Lee. Experimental study on sound insulation of ventilation
+            partitions. Journal of Acoustics, 2019, 1:1-13.</li>
+          <li>14. <b>Liangfen Du</b>, Siu-Kit Lau, Siew Eang Lee. Experimental study on sound transmission loss of
+            plenum
+            windows. The Journal of the Acoustical Society of America, 2019, 146(6): EL489-EL495.</li>
+          <li>15. <b>Liangfen Du</b>, Siu-Kit Lau, Siew Eang Lee. Sound insulation of ventilation partitions with
+            different
+            Configurations. The 48th Inter-Noise, Madrid, Spain, June 16-19, 2019.</li>
+          <li>16. <b>Liangfen Du</b>, Goran Pavić. Modelling of multiply connected sound spaces by the surface coupling
+            approach. The Journal of the Acoustical Society of America, 2019, 146(6): 4273-4287.</li>
+          <li>17. Goran Pavić, <b>Liangfen Du</b>. Coupling of sound spaces by plane surface harmonics and its
+            application
+            to sound source characterization. Journal of Sound and Vibration, 2019, 440: 1-22.</li>
+          <li>18. <b>Liangfen Du</b>, Goran Pavić. Experimental characterization of air-borne sound sources via surface
+            coupling. Applied Acoustics, 2018, 134: 97-109.</li>
+          <li>19. Goran Pavić, <b>Liangfen Du</b>. Coupling of sound spaces by the surface impedance approach. The 8th
+            Congress of the Alps Adria Acoustics Association, Zagreb, Croatia, September 20-21, 2018.</li>
+          <li>20. Goran Pavić, <b>Liangfen Du</b>. Modelling of multi-connected acoustical spaces by the surface
+            impedance
+            approach. The 45th Inter-Noise, Hamburg, Germany, August 21-24, 2016.</li>
+          <li>21. <b>Liangfen Du</b>, Goran Pavić. Experimental demonstration of sound prediction by source
+            characterization. The 44th Inter-Noise, San Francisco, USA, August 9-12, 2015.</li>
+          <li>22. <b>Liangfen Du</b>, Goran Pavić. Characterisation of sound sources by plane surface harmonics.
+            Proceeding
+            of Noise and Vibration – Emerging technologies (NOVEM2015), Dubrovnik, Croatia, April 13-15, 2015.</li>
+          <li>23. <b>Liangfen Du</b> and Goran Pavić. Acoustical source-receiver interfacing using the patch impedance
+            approach. Conference of French Acoustic, Poitiers, France, April 22-25, 2014. (Oral presentation in French).
+          </li>
         </ul>
       </div>
 
