add google scholar

--- a/index.html
+++ b/index.html
@@ -223,6 +223,11 @@
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
+              <a href="https://scholar.google.com/citations?user=idn8CHAAAAAJ" target="_blank">
+                <button class="icon-btn google-scholar">
+                  <img src="/assets/img/google-scholar.png" alt="gs Logo" style="width: 40px;">
+                </button>
+              </a>
               <a href="https://www.polyu.edu.hk/beee/people/academic-staff/dr-du-liangfen/" target="_blank">
                 <button class="icon-btn hkpu">
                   <img src="/assets/img/hkpu-logo.png" alt="HKPU Logo" style="width: 30px; height: 30px;">
@@ -612,3 +617,5 @@
 </body>
 
 </html>
+<!-- End of the HTML file 
+more possible sections: teaching, students, fundings & awards -->
