stop loop the typing word

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
     var typed = new Typed('.typing', {
       // strings: ["Researcher", "Acoustician", "Pythonist"],
       strings: ["passionate practitioner in acoustics."],
-      loop: true,
+      loop: false,
       typeSpeed: 80,
       backSpeed: 2
     });
