add projects and services

--- a/index.html
+++ b/index.html
@@ -428,51 +428,19 @@
 
             <!-- Fourth Section: Projects -->
             <section id="projects" class="section scrollspy">
-                <h3 class="page-title white-text teal">Projects (WIP)</h3>
+                <h3 class="page-title white-text teal">Projects</h3>
                 <div class="container">
-                    <div class="row">
-                        <!-- Image Generator -->
-                        <div class="col s12 m6 l4">
-                            <div class="card medium">
-                                <div class="card-image waves-effect waves-block waves-light">
-                                    <img alt="Screenshot of  web app" src="/assets/img/gan.jpg"
-                                        style="height: 100%; width: 100%" class="activator" />
-                                </div>
-                                <div class="card-content">
-                                    <span class="card-title activator teal-text hoverline">Image Generator<i
-                                            class="mdi-navigation-more-vert right"></i></span>
-                                    <p>
-                                        An image generator based on the concept of adversarial networks (GANs)
-                                    </p>
-                                </div>
-                                <div class="card-reveal">
-                                    <!-- TODO: change this -- only close button -->
-                                    <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                                    <span class="card-title brown-text"><small>Accomplishments</small><i
-                                            class="mdi-navigation-close right"></i></span>
-                                    <ul>
-                                        <li>Developed system was tested on a human-face database and loss was calculated
-                                            by comparing the
-                                            PCAs
-                                            of generated and original image.</li>
-                                        <li>Calculated difference in PCA was less than 10%, depicting the successful
-                                            generation of an
-                                            image by
-                                            the generator.</li>
-
-                                    </ul>
-                                    <div class="card-action">
-                                        <a aria-label="Visit the GitHub repo for  project"
-                                            href="https://liangfen-du.github.io/" target="_blank" data-position="top"
-                                            data-tooltip="View Source"
-                                            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                                                class="fa fa-github"></i></a>
-                                    </div>
-                                </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="row text-left">
+                                <li>Main investigator: Meta-surface based broadband ultrasonic deep-subwavelength
+                                    imaging (MOE AcRF Tier 2, SGD $832,128)</li>
+                                <li>Main investigator: Enhancing aural comfort in Singapore Homes through NUS-CDL Smart
+                                    Green Home Test-Bedding Studies (NUS – CDL joint grant, SGD $298,000)</li>
                             </div>
                         </div>
-
                     </div>
+                </div>
                 </div>
             </section>
 
@@ -502,8 +470,11 @@
                     <div class="card">
                         <div class="card-content">
                             <h4 class="brown-text light">Reviewer</h4>
-                            <div class="row text-center">
-
+                            <div class="row text-left">
+                                <li>The Journal of the Acoustical Society of America (<a
+                                        href="https://pubs.aip.org/asa/jasa" target="_blank">link</a>)</li>
+                                <li>Applied Acoustics (<a href='https://www.sciencedirect.com/journal/applied-acoustics'
+                                        target="_blank">link</a>)</li>
                             </div>
                         </div>
                     </div>
@@ -512,7 +483,10 @@
                     <div class="card">
                         <div class="card-content">
                             <h4 class="brown-text light">Others</h4>
-                            <div class="row text-center">
+                            <div class="row text-left">
+                                <li>Organizing committee member, Hong Kong Joint Symposium 2024 "Innovating and
+                                    Revitalizing Productivity in Building Services with 3S (Smart, Sustainability and
+                                    Safety) Solutions towards Carbon Neutrality”</li>
 
                             </div>
                         </div>
