add email address

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                 students to join my team. If you are interested in research on building acoustics,
                                 environmental noise control,
                                 acoustic metasurfaces, and other acoustics-related areas, please send your CV,
-                                transcript, and list of publications to me via email. </p>
+                                transcript, and list of publications to me via email: <u>liangfen.du@polyu.edu.hk</u></p>
                             <img src="/assets/img/liangfen-photo.jpg" class="rectangle img" alt="avatar"
                                 style="width: 150px;">
                             <p>
