--- a/index.html
+++ b/index.html
@@ -214,16 +214,6 @@
                             <!-- <h2>Hi, I'm <span class="teal">Liangfen Du, 杜良芬.</span></h2> -->
                             <h5 style="color:#fff">Hi, I am Liangfen Du (Chinese: 杜良芬). I am a <span class="typing"
                                     style="font-weight: 300; color:rgb(219, 235, 141)"></span></h5>
-
-                            <p style="color: rgb(219, 235, 141);"> I am seeking potential PhD candidates, Master’s
-                                graduates, Postdocs,
-                                and exchange PhD
-                                students to join my team. If you are interested in research on building acoustics,
-                                environmental noise control,
-                                acoustic metasurfaces, and other acoustics-related areas, please send your CV,
-                                transcript, and list of publications to me via email: <u>liangfen.du@polyu.edu.hk</u></p>
-                            <img src="/assets/img/liangfen-photo.jpg" class="rectangle img" alt="avatar"
-                                style="width: 150px;">
                             <p>
                                 I joined the Hong Kong Polytechnic University as an Assistant Professor in April 2024.
                                 And my
@@ -236,6 +226,19 @@
                                 <li>★ Environmental noise control</li>
                             </ul>
                         </div>
+                        <h4 style="color: rgb(179, 5, 5);">News</h4>
+                        <ul>
+                            <p>07/2024: <u>I am seeking potential PhD candidates, Master’s
+                                graduates, Postdocs, and exchange PhD students to join my team</u>. If you are interested in
+                                research on building acoustics, environmental noise control,
+                                acoustic metasurfaces, and other acoustics-related areas, please send your CV,
+                                transcript, and list of publications to me via email: liangfen.du@polyu.edu.hk
+                            </p>
+
+                            <p>07/2024: <u>I also provide consultancy services</u> in various acoustic-related areas,
+                                including Noise Impact Assessment, Room Acoustics, Noise and Vibration Control,
+                                Acoustical Measurement, and other related fields.</p>
+                        </ul>
                         <div class="social">
                             <a href="https://www.linkedin.com/in/liangfen-du-a8770257/" target="_blank">
                                 <button class="icon-btn linkedin">
@@ -276,9 +279,10 @@
                 <!-- <blockquote>
           <h2>
             A Software Developer with a passion for Backend Development and Artificial Intelligence.
-
           </h2>
+          
         </blockquote> -->
+                <img src="/assets/img/liangfen-photo.jpg" class="rectangle img" alt="avatar" style="width: 150px;">
                 <p>
                     Dr Liangfen DU joined the Department of Building Environment and Energy Engineering (BEEE) as an
                     Assistant
@@ -312,10 +316,7 @@
           Looking for an opportunity to work in a challenging position combining my skills in Software Engineering,
           which provides professional development, interesting experiences and personal growth.
         </p> -->
-                <h4 style="color: red;">News</h4>
-                <ul>
-                    <li><b>2024/04:</b> I joined BEEE@PolyU as an Assistant Professor</li>
-                </ul>
+
                 <!-- <p>
         <strong>Current Focus</strong>:&nbsp;<a aria-label="Navigate to the Inclusive Design Patterns homepage"
           href="https://www.smashingmagazine.com/inclusive-design-patterns/">Accessibility</a>&nbsp;//&nbsp;<a
@@ -432,11 +433,23 @@
                 <div class="container">
                     <div class="card">
                         <div class="card-content">
+                            <h4 class="brown-text light">Research</h4>
                             <div class="row text-left">
                                 <li>Main investigator: Meta-surface based broadband ultrasonic deep-subwavelength
                                     imaging (MOE AcRF Tier 2, SGD $832,128)</li>
                                 <li>Main investigator: Enhancing aural comfort in Singapore Homes through NUS-CDL Smart
                                     Green Home Test-Bedding Studies (NUS – CDL joint grant, SGD $298,000)</li>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <h4 class="brown-text light">Consultancy</h4>
+                            <div class="row text-left">
+                                <li>Baseline acoustical assessment for Systems on Silicon Manufacturing Company Pte Ltd (SSMC)</li>
+                                <li>Noise prediction on building facades for Forest Woods Condominium</li>
+                                <li>Classroom renovation for better speech intelligibility for Hwa Chong Institution</li>
+                                <li>Acoustical design of offices for Merck</li>
                             </div>
                         </div>
                     </div>
