--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 </a>
             </li>
 
-            <!-- <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-person small"></i><span>About</span></a>
-      </li> -->
+            <li class="bold">
+                <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
+                        class="mdi-social-person small"></i><span>About Me</span></a>
+            </li>
             <li class="bold">
                 <a aria-label="Navigate to the Publications section" href="#publications"
                     class="waves-effect waves-dark teal-text"><i
@@ -164,10 +164,10 @@
     <!-- Nav class 3 -->
     <nav class="hide-on-large only">
         <ul id="slide-out" class="side-nav">
-            <!-- <li class="bold">
-        <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-person small"></i><span>About</span></a>
-      </li> -->
+            <li class="bold">
+                <a aria-label="Navigate to the About section" href="#about" class="waves-effect waves-dark teal-text"><i
+                        class="mdi-social-person small"></i><span>About Me</span></a>
+            </li>
             <li class="bold">
                 <a aria-label="Navigate to the Publications section" href="#publications"
                     class="waves-effect waves-dark teal-text"><i
@@ -229,7 +229,8 @@
                         <h4 style="color: rgb(179, 5, 5);">News</h4>
                         <ul>
                             <p>07/2024: <u>I am seeking potential PhD candidates, Master’s
-                                graduates, Postdocs, and exchange PhD students to join my team</u>. If you are interested in
+                                    graduates, Postdocs, and exchange PhD students to join my team</u>. If you are
+                                interested in
                                 research on building acoustics, environmental noise control,
                                 acoustic metasurfaces, and other acoustics-related areas, please send your CV,
                                 transcript, and list of publications to me via email: liangfen.du@polyu.edu.hk
@@ -446,9 +447,11 @@
                         <div class="card-content">
                             <h4 class="brown-text light">Consultancy</h4>
                             <div class="row text-left">
-                                <li>Baseline acoustical assessment for Systems on Silicon Manufacturing Company Pte Ltd (SSMC)</li>
+                                <li>Baseline acoustical assessment for Systems on Silicon Manufacturing Company Pte Ltd
+                                    (SSMC)</li>
                                 <li>Noise prediction on building facades for Forest Woods Condominium</li>
-                                <li>Classroom renovation for better speech intelligibility for Hwa Chong Institution</li>
+                                <li>Classroom renovation for better speech intelligibility for Hwa Chong Institution
+                                </li>
                                 <li>Acoustical design of offices for Merck</li>
                             </div>
                         </div>
