remove the bg in 1st section

--- a/index.html
+++ b/index.html
@@ -204,77 +204,67 @@
 
     <!-- Main Content-->
     <main>
-        <!-- First Section: Heading lines and image -->
-        <section id="intro" class="section scrollspy full-height">
-            <div class="overlay"></div>
-            <div class="container">
-                <div class="col-md-9">
-                    <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
-                        <div class="caption">
-                            <!-- <h2>Hi, I'm <span class="teal">Liangfen Du, 杜良芬.</span></h2> -->
-                            <h5 style="color:#fff">Hi, I am Liangfen Du (Chinese: 杜良芬). I am a <span class="typing"
-                                    style="font-weight: 300; color:rgb(219, 235, 141)"></span></h5>
-                            <p>
-                                I joined the Hong Kong Polytechnic University as an Assistant Professor in April 2024.
-                                And my
-                                research interests include:
-                            </p>
-                            <ul style="list-style-type: none;">
-                                <li>★ Noise reduction technologies enabling natural ventilation</li>
-                                <li>★ Acoustic metasurfaces</li>
-                                <li>★ Sound prediction</li>
-                                <li>★ Environmental noise control</li>
-                            </ul>
-                        </div>
-                        <h4 style="color: rgb(179, 5, 5);">News</h4>
-                        <ul>
-                            <p>07/2024: <u>I am seeking potential PhD candidates, Master’s
-                                    graduates, Postdocs, and exchange PhD students to join my team</u>. If you are
-                                interested in
-                                research on building acoustics, environmental noise control,
-                                acoustic metasurfaces, and other acoustics-related areas, please send your CV,
-                                transcript, and list of publications to me via email: liangfen.du@polyu.edu.hk
-                            </p>
+        <!-- First Section: Introduction -->
+        <section id="new_intro" class="section scrollspy" style="text-align: justify;">
+            <div class="container flow-text">
+                <h5 style="color:#1a1818">Hi, I am Liangfen Du (Chinese: 杜良芬).</h5>
+                <p>
+                    I joined the Hong Kong Polytechnic University as an Assistant Professor in April 2024.
+                    And my
+                    research interests include:
+                </p>
+                <ul style="list-style-type: none;">
+                    <li>★ Noise reduction technologies enabling natural ventilation</li>
+                    <li>★ Acoustic metasurfaces</li>
+                    <li>★ Sound prediction</li>
+                    <li>★ Environmental noise control</li>
+                </ul>
 
-                            <p>07/2024: <u>I also provide consultancy services</u> in various acoustic-related areas,
-                                including Noise Impact Assessment, Room Acoustics, Noise and Vibration Control,
-                                Acoustical Measurement, and other related fields.</p>
-                        </ul>
-                        <div class="social">
-                            <a href="https://www.linkedin.com/in/liangfen-du-a8770257/" target="_blank">
-                                <button class="icon-btn linkedin">
-                                    <i class="fa fa-linkedin"></i>
-                                </button>
-                            </a>
-                            <a href="https://scholar.google.com/citations?user=idn8CHAAAAAJ" target="_blank">
-                                <button class="icon-btn google-scholar">
-                                    <img src="/assets/img/google-scholar.png" alt="gs Logo" style="width: 40px;">
-                                </button>
-                            </a>
-                            <a href="https://www.researchgate.net/profile/Liangfen-Du" target="_blank">
-                                <button class="icon-btn researchgate">
-                                    <img src="/assets/img/researchgate.png" alt="rg Logo" style="width: 30px;">
-                                </button>
-                            </a>
-                            <a href="https://www.polyu.edu.hk/beee/people/academic-staff/dr-du-liangfen/"
-                                target="_blank">
-                                <button class="icon-btn hkpu">
-                                    <img src="/assets/img/hkpu-logo.png" alt="HKPU Logo"
-                                        style="width: 30px; height: 30px;">
-                                </button>
-                            </a>
-                        </div>
-                        <div class='buttons'>
-                            <a href="#about" class="readme">More about Me</a>
-                            <a href="#contact" class="contactme">Contact Me</a>
-                        </div>
-                    </div>
+                <h4 style="color: rgb(179, 5, 5);">News</h4>
+                <ul>
+                    <p>07/2024: <u>I am seeking potential PhD candidates, Master’s
+                            graduates, Postdocs, and exchange PhD students to join my team</u>. If you are
+                        interested in
+                        research on building acoustics, environmental noise control,
+                        acoustic metasurfaces, and other acoustics-related areas, please send your CV,
+                        transcript, and list of publications to me via email: liangfen.du@polyu.edu.hk
+                    </p>
+
+                    <p>07/2024: <u>I also provide consultancy services</u> in various acoustic-related areas,
+                        including Noise Impact Assessment, Room Acoustics, Noise and Vibration Control,
+                        Acoustical Measurement, and other related fields.</p>
+                </ul>
+                <div class="social">
+                    <a href="https://www.linkedin.com/in/liangfen-du-a8770257/" target="_blank">
+                        <button class="icon-btn linkedin">
+                            <i class="fa fa-linkedin"></i>
+                        </button>
+                    </a>
+                    <a href="https://scholar.google.com/citations?user=idn8CHAAAAAJ" target="_blank">
+                        <button class="icon-btn google-scholar">
+                            <img src="/assets/img/google-scholar.png" alt="gs Logo" style="width: 40px;">
+                        </button>
+                    </a>
+                    <a href="https://www.researchgate.net/profile/Liangfen-Du" target="_blank">
+                        <button class="icon-btn researchgate">
+                            <img src="/assets/img/researchgate.png" alt="rg Logo" style="width: 30px;">
+                        </button>
+                    </a>
+                    <a href="https://www.polyu.edu.hk/beee/people/academic-staff/dr-du-liangfen/" target="_blank">
+                        <button class="icon-btn hkpu">
+                            <img src="/assets/img/hkpu-logo.png" alt="HKPU Logo" style="width: 30px; height: 30px;">
+                        </button>
+                    </a>
                 </div>
+                <div class='buttons'>
+                    <a href="#contact" class="contactme2">Contact Me</a>
+                </div>
+
             </div>
         </section>
 
         <!-- Second Section: About -->
-        <section id="about" class="section scrollspy">
+        <section id="about" class="section scrollspy" style="text-align: justify;">
             <h3 class="page-title white-text teal">About</h3>
             <div class="container flow-text">
                 <!-- <blockquote>
