--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
         <!-- Second Section: About -->
         <section id="about" class="section scrollspy">
-            <h3 class="page-title white-text teal">About</h3>
+            <h3 class="page-title white-text teal">About Me</h3>
             <div class="container flow-text">
                 <!-- <blockquote>
           <h2>
