change text style

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     acoustic metasurfaces, sound prediction, and environmental noise control.
                 </div>
             </div>
-            <div class="container flow-text">
+            <div class="container">
                 <h4 style="color: rgb(179, 5, 5);">News</h4>
                 <ul>
                     <p>07/2024: <u>I am seeking potential PhD candidates, Master’s
@@ -246,7 +246,7 @@
         <!-- Second Section: About -->
         <section id="about" class="section scrollspy">
             <h3 class="page-title white-text teal">About Me</h3>
-            <div class="container flow-text">
+            <div class="container">
                 <!-- <blockquote>
           <h2>
             A Software Developer with a passion for Backend Development and Artificial Intelligence.
