use aspect ratio

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <main>
         <!-- First Section: Introduction -->
         <section id="new_intro" class="section scrollspy">
-            <div class="container flow-text" style="display: flex; align-items: flex-start;">
+            <div class="container" style="display: flex; align-items: flex-start;">
                 <div style="float: left; margin-right: 20px;">
                     <img src="/assets/img/liangfen-photo.jpg" class="rectangle img" alt="avatar" 
                         style="width: 150px; margin-top: 20px; margin-bottom: 20px;">
@@ -214,8 +214,11 @@
                 <div style="overflow: hidden; margin-top: 20px">
                     Hi, I am <b>Liangfen Du (Chinese: 杜良芬)</b>. I am an assistant professor in the Department of
                     Building Environment and Energy Engineering at the Hong Kong Polytechnic Univeristy.
-                    My research interests include: noise reduction technologies enabling natural ventilation,
-                    acoustic metasurfaces, sound prediction, and environmental noise control.
+                    My research interests include: 
+                        <li>Noise reduction technologies enabling natural ventilation</li>
+                        <li>Acoustic metasurfaces</li>
+                        <li>Sound prediction</li>
+                        <li>Environmental noise control</li>
                 </div>
             </div>
             <div class="container">
